Fixes iOS right roverflow issue with 100% width and padding - Evan found this fixes issues on iPhone where a 100% width div having padding allows the user to scroll tot he right and then shows an odd margin. The issue is that 100% width AND padding gets the padding added to the final width, making it wider than 100%. Evan can explain this better, I'm sure! :)

--- a/default/includes/themes/merced/css/mobile/mobile.css
+++ b/default/includes/themes/merced/css/mobile/mobile.css
@@ -253,3 +253,9 @@ li .req ins {
 /* @end Calendar
 -------------------------------- */
 
+/*
+	Fixes iOS right roverflow issue with 100% width and padding
+*/
+.ui-header, .ui-footer, .ui-page-fullscreen .ui-header, .ui-page-fullscreen .ui-footer {
+	width: auto;
+}
